--- a/spec/kong_tests.conf
+++ b/spec/kong_tests.conf
@@ -2,7 +2,7 @@ admin_listen = 127.0.0.1:9001
 proxy_listen = 0.0.0.0:9000
 
 database = postgres
-pg_host = postgres
+pg_host = localhost
 pg_port = 5432
 pg_database = kong
 pg_password = kong
