--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           POSTGRES_PASSWORD: kong
     steps:
       - checkout
-      - test:
+      - run:
           name: Test
           command: |
             wget http://geolite.maxmind.com/download/geoip/database/GeoLite2-City.tar.gz
