--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
         aws_auth: &ecr_credentials
           aws_access_key_id: $STAGING_AWS_ACCESS_KEY_ID
           aws_secret_access_key: $STAGING_AWS_SECRET_ACCESS_KEY
-      - image: circleci/postgres:9.6.2-alpine
+      - image: postgres
         environment:
           POSTGRES_DB: kong
           POSTGRES_USER: kong
