--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,8 @@ jobs:
       - run:
           name: Test
           command: |
-            wget http://geolite.maxmind.com/download/geoip/database/GeoLite2-City.tar.gz
-            tar zxvf GeoLite2-City.tar.gz
-            chmod 777 -R /root/project/GeoLite2*
+            wget -O /tmp/geolite.tar.gz http://geolite.maxmind.com/download/geoip/database/GeoLite2-City.tar.gz
+            mkdir /tmp/geolite/ && tar zxvf /tmp/geolite.tar.gz -C /tmp/geolite/
 
             export LUA_PATH="/root/project/?.lua;/root/project/?/init.lua;/kong/?.lua;;"
             cp spec/kong_tests.conf /kong/spec/
