--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,8 @@ jobs:
           name: Test
           command: |
             wget -O /tmp/geolite.tar.gz http://geolite.maxmind.com/download/geoip/database/GeoLite2-City.tar.gz
-            mkdir /tmp/geolite/ && tar zxvf /tmp/geolite.tar.gz -C /tmp/geolite/
-            ln -nsf /tmp/geolite/Geo* /tmp/geolite/latest
+            mkdir -p /var/opt/geolite/ && tar zxvf /tmp/geolite.tar.gz -C /var/opt/geolite/
+            ln -nsf /var/opt/geolite/Geo* /var/opt/geolite/latest
 
             export LUA_PATH="/root/project/?.lua;/root/project/?/init.lua;/kong/?.lua;;"
             cp spec/kong_tests.conf /kong/spec/
